Run was succesful.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,13 +356,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBTdy4Ta4Y6S",
-        "outputId": "c6ec7f59-6440-4bbf-d4e9-d75a972dfe0e"
+        "outputId": "5a54e661-3287-40ff-fb6a-c129491500c1"
       },
       "outputs": [
         {
@@ -426,13 +426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYGILMcJNBGR",
-        "outputId": "28ccd19e-64b5-463e-d6dc-5346be2ce4ff"
+        "outputId": "7fd04caf-b2da-4a53-fa3b-a10da2624374"
       },
       "outputs": [
         {
@@ -543,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 96,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -1175,7 +1175,7 @@
       "metadata": {
         "id": "BWtFPZDfv2go"
       },
-      "execution_count": 66,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -1189,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 98,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1254,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 99,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1325,7 +1325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 100,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1375,7 +1375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 101,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1410,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 102,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 103,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1803,7 +1803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 104,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2263,7 +2263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 105,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2493,7 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 106,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2598,7 +2598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 107,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -2921,7 +2921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 108,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3073,7 +3073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 109,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3469,7 +3469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 110,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3529,7 +3529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 111,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3757,7 +3757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 112,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4048,7 +4048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 113,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4288,12 +4288,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 83,
+      "execution_count": 114,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 115,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4423,7 +4423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 116,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4534,7 +4534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 117,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -4999,7 +4999,7 @@
       "metadata": {
         "id": "djg0IVctsb4m"
       },
-      "execution_count": 87,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -5013,7 +5013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 119,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -5128,7 +5128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 120,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -5626,7 +5626,7 @@
       "metadata": {
         "id": "ne592r-4qT8O"
       },
-      "execution_count": 90,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -6009,7 +6009,7 @@
       "metadata": {
         "id": "5VnLTXPTkrh7"
       },
-      "execution_count": 91,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -6176,7 +6176,7 @@
       "metadata": {
         "id": "ozfjACkyFjxh"
       },
-      "execution_count": 92,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -6191,13 +6191,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp7sEX5GT2BE",
-        "outputId": "b8f35a9c-eedf-4332-f912-73526c277c54"
+        "outputId": "e6977c2a-9a37-4cce-e5a0-9d19af0f53eb"
       },
       "outputs": [
         {
@@ -6209,7 +6209,7 @@
             "INFO - Neo4j connection closed.\n",
             "INFO - Neo4j connection successful.\n",
             "INFO - --- Starting Experiment Run: 15 groups defined ---\n",
-            "INFO - Run ID: RUN_2025-09-19_16-40-30\n",
+            "INFO - Run ID: RUN_2025-09-19_16-46-09\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Environment Cleanup (GRP001)\n",
             "INFO - Executing utility task: Clearing database.\n",
@@ -6260,41 +6260,62 @@
             "INFO - Configuration for 'GRP901EXP001' validated successfully.\n",
             "INFO - Successfully connected to Neo4j database.\n",
             "INFO - Neo4j database cleared.\n",
-            "INFO - An unexpected error occurred during LLMService initialization: Unknown LLM: None\n",
-            "INFO - Workflow for GRP901EXP001 FAILED: Unknown LLM: None\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/tmp/ipython-input-2913704529.py\", line 196, in run\n",
-            "    a_mind = Mind(\n",
-            "             ^^^^^\n",
-            "  File \"/tmp/ipython-input-2503324416.py\", line 22, in __init__\n",
-            "    self.llm_service = LLMService(llm, llm_model, llm_api_key, temperature, max_output_tokens)\n",
-            "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/tmp/ipython-input-1274175589.py\", line 47, in __init__\n",
-            "    raise ValueError(f\"Unknown LLM: {self.llm}\")\n",
-            "ValueError: Unknown LLM: None\n",
+            "INFO - ▶️ START: Loading KG from dump file...\n",
+            "INFO -   Wrote KG fragment to LTM with experiment and run labels.\n",
+            "INFO -   Successfully loaded KG from GRP201EXP001_kg_dump.json\n",
+            "INFO - ✅ END: Loading KG from dump file.\n",
+            "INFO - ▶️ START: Generating extracted entity word cloud...\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP001_entity_wordcloud.png\n",
+            "INFO - ✅ END: Generating extracted entity word cloud.\n",
+            "INFO - ▶️ START: Generating relationship type word cloud...\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP001_relationship_wordcloud.png\n",
+            "INFO - ✅ END: Generating relationship type word cloud.\n",
+            "INFO - ▶️ START: Generating ontology type graph...\n",
+            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP001_ontology_graph.png\n",
+            "INFO - ✅ END: Generating ontology type graph.\n",
+            "INFO - ▶️ START: Exporting final graph to JSON...\n",
+            "INFO -   Exporting graph for experiment 'GRP901EXP001'...\n",
+            "INFO -   Exported 83 nodes and 230 relationships.\n",
+            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP001_kg_dump.json\n",
+            "INFO - ✅ END: Exporting final graph to JSON.\n",
             "INFO - Neo4j connection closed.\n",
             "INFO - Configuration for 'GRP901EXP002' validated successfully.\n",
             "INFO - Successfully connected to Neo4j database.\n",
             "INFO - Neo4j database cleared.\n",
-            "INFO - An unexpected error occurred during LLMService initialization: Unknown LLM: None\n",
-            "INFO - Workflow for GRP901EXP002 FAILED: Unknown LLM: None\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/tmp/ipython-input-2913704529.py\", line 196, in run\n",
-            "    a_mind = Mind(\n",
-            "             ^^^^^\n",
-            "  File \"/tmp/ipython-input-2503324416.py\", line 22, in __init__\n",
-            "    self.llm_service = LLMService(llm, llm_model, llm_api_key, temperature, max_output_tokens)\n",
-            "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/tmp/ipython-input-1274175589.py\", line 47, in __init__\n",
-            "    raise ValueError(f\"Unknown LLM: {self.llm}\")\n",
-            "ValueError: Unknown LLM: None\n",
+            "INFO - ▶️ START: Loading KG from dump file...\n",
+            "INFO -   Wrote KG fragment to LTM with experiment and run labels.\n",
+            "INFO -   Successfully loaded KG from GRP201EXP001_kg_dump.json\n",
+            "INFO - ✅ END: Loading KG from dump file.\n",
+            "INFO - ▶️ START: Generating Report...\n",
+            "INFO -   Report generation step executed (placeholder).\n",
+            "INFO - ✅ END: Generating Report.\n",
+            "INFO - ▶️ START: Generating extracted entity word cloud...\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP002_entity_wordcloud.png\n",
+            "INFO - ✅ END: Generating extracted entity word cloud.\n",
+            "INFO - ▶️ START: Generating relationship type word cloud...\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP002_relationship_wordcloud.png\n",
+            "INFO - ✅ END: Generating relationship type word cloud.\n",
+            "INFO - ▶️ START: Generating ontology type graph...\n",
+            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901EXP002_ontology_graph.png\n",
+            "INFO - ✅ END: Generating ontology type graph.\n",
+            "INFO - ▶️ START: Exporting final graph to JSON...\n",
+            "INFO -   Exporting graph for experiment 'GRP901EXP002'...\n",
+            "INFO -   Exported 83 nodes and 230 relationships.\n",
+            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP002_kg_dump.json\n",
+            "INFO - ✅ END: Exporting final graph to JSON.\n",
             "INFO - Neo4j connection closed.\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/04_kg_metrics.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/05_kg_nodes.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - ALL EXPERIMENTS COMPLETED\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/00_master_run_summary.csv\n",
-            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-40-30/08_run_summary.tex\n",
-            "INFO - --- Run RUN_2025-09-19_16-40-30 finished ---\n"
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/00_master_run_summary.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/04_kg_metrics.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/05_kg_nodes.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/06_kg_relationships.csv\n",
+            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_16-46-09/08_run_summary.tex\n",
+            "INFO - --- Run RUN_2025-09-19_16-46-09 finished ---\n"
           ]
         },
         {
@@ -6303,9 +6324,9 @@
           "text": [
             "\n",
             "--- MASTER EXPERIMENT RUN SUMMARY ---\n",
-            "  group_id experiment_id                    experiment_name   status  duration_seconds  consolidation_duration_seconds ground_truth_source overall_score entity_f1_score relationship_f1_score              error\n",
-            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Failure          1.615025                             0.0                 N/A           N/A             N/A                   N/A  Unknown LLM: None\n",
-            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Failure          1.614747                             0.0                 N/A           N/A             N/A                   N/A  Unknown LLM: None\n"
+            "  group_id experiment_id                    experiment_name   status  duration_seconds  consolidation_duration_seconds ground_truth_source overall_score entity_f1_score relationship_f1_score error\n",
+            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Success         58.820173                             0.0                 N/A           N/A             N/A                   N/A      \n",
+            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Success         56.316041                             0.0                 N/A           N/A             N/A                   N/A      \n"
           ]
         }
       ],
