--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -4700,6 +4700,215 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Report Generator Class"
+      ],
+      "metadata": {
+        "id": "LRaoh7J8504P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "class ReportGenerator:\n",
+        "    \"\"\"\n",
+        "    Generates a detailed LaTeX analysis report by running a series of\n",
+        "    pre-defined Cypher queries against the knowledge graph for a specific experiment.\n",
+        "    \"\"\"\n",
+        "    def __init__(self, graph_db_reader: 'GraphDBReader', experiment_id: str, run_timestamp: str, output_path: Path):\n",
+        "        self.reader = graph_db_reader\n",
+        "        self.experiment_id = experiment_id\n",
+        "        self.run_timestamp = run_timestamp\n",
+        "        self.output_path = output_path\n",
+        "        self.scoped_label = self.reader._get_scoped_label(experiment_id, run_timestamp)\n",
+        "        self.latex_content = []\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def _escape_latex(text: any) -> str:\n",
+        "        \"\"\"Escapes special LaTeX characters in a string.\"\"\"\n",
+        "        if not isinstance(text, str):\n",
+        "            text = str(text)\n",
+        "        return text.replace('\\\\', r'\\\\textbackslash{}') \\\\\n",
+        "                   .replace('{', r'\\\\{') \\\\\n",
+        "                   .replace('}', r'\\\\}') \\\\\n",
+        "                   .replace('#', r'\\\\#') \\\\\n",
+        "                   .replace('$', r'\\\\$') \\\\\n",
+        "                   .replace('%', r'\\\\%') \\\\\n",
+        "                   .replace('&', r'\\\\&') \\\\\n",
+        "                   .replace('_', r'\\\\_') \\\\\n",
+        "                   .replace('^', r'\\\\textasciicircum{}') \\\\\n",
+        "                   .replace('~', r'\\\\textasciitilde{}')\n",
+        "\n",
+        "    def _add_line(self, line=\"\"):\n",
+        "        self.latex_content.append(line)\n",
+        "\n",
+        "    def _generate_header(self):\n",
+        "        \"\"\"Generates the LaTeX document preamble.\"\"\"\n",
+        "        self._add_line(r\"\\\\documentclass{article}\")\n",
+        "        self._add_line(r\"\\\\usepackage[margin=1in]{geometry}\")\n",
+        "        self._add_line(r\"\\\\usepackage{longtable}\")\n",
+        "        self._add_line(r\"\\\\usepackage{booktabs}\")\n",
+        "        self._add_line(r\"\\\\usepackage{graphicx}\")\n",
+        "        self._add_line(r\"\\\\title{Mnemosyne Knowledge Graph Analysis Report}\")\n",
+        "        self._add_line(r\"\\\\author{Experiment: \" + self._escape_latex(self.experiment_id) + r\"}\")\n",
+        "        self._add_line(r\"\\\\date{\\\\today}\")\n",
+        "        self._add_line(r\"\\\\begin{document}\")\n",
+        "        self._add_line(r\"\\\\maketitle\")\n",
+        "\n",
+        "    def _generate_footer(self):\n",
+        "        self._add_line(r\"\\\\end{document}\")\n",
+        "\n",
+        "    def _run_and_format_query(self, title: str, description: str, query: str, columns: list, interpretation: str):\n",
+        "        \"\"\"A generic method to run a query, format results into a LaTeX table, and add interpretation.\"\"\"\n",
+        "        self._add_line(r\"\\\\subsection*{\" + self._escape_latex(title) + \"}\")\n",
+        "        self._add_line(self._escape_latex(description))\n",
+        "        self._add_line()\n",
+        "\n",
+        "        records = []\n",
+        "        try:\n",
+        "            with self.reader.driver.session() as session:\n",
+        "                result = session.run(query)\n",
+        "                records = [record.data() for record in result]\n",
+        "        except Exception as e:\n",
+        "            logging.error(f\"Failed to run query for '{title}': {e}\")\n",
+        "            self._add_line(\"{\\\\\\\\color{red} Query failed to execute. See logs for details.}\")\n",
+        "            return\n",
+        "\n",
+        "        if not records:\n",
+        "            self._add_line(\"No results found.\")\n",
+        "        else:\n",
+        "            col_format = \" \".join([\"p{0.25\\\\textwidth}\" for _ in columns])\n",
+        "            self._add_line(r\"\\\\begin{longtable}{\" + col_format + \"}\")\n",
+        "            self._add_line(r\"\\\\toprule\")\n",
+        "            self._add_line(\" & \".join([f\"\\\\\\\\textbf{{{self._escape_latex(c)}}}\" for c in columns]) + r\" \\\\\\\\\")\n",
+        "            self._add_line(r\"\\\\midrule\")\n",
+        "            self._add_line(r\"\\\\endfirsthead\")\n",
+        "            self._add_line(r\"\\\\endhead\")\n",
+        "\n",
+        "            for record in records:\n",
+        "                row_data = []\n",
+        "                for col in columns:\n",
+        "                    val = record.get(col, \"N/A\")\n",
+        "                    # Handle list outputs from queries\n",
+        "                    if isinstance(val, list):\n",
+        "                        val = \", \".join(map(str, val))\n",
+        "                    row_data.append(self._escape_latex(val))\n",
+        "                self._add_line(\" & \".join(row_data) + r\" \\\\\\\\\")\n",
+        "\n",
+        "            self._add_line(r\"\\\\bottomrule\")\n",
+        "            self._add_line(r\"\\\\end{longtable}\")\n",
+        "\n",
+        "        self._add_line(r\"\\\\subsubsection*{Interpretation}\")\n",
+        "        self._add_line(self._escape_latex(interpretation))\n",
+        "        self._add_line(r\"\\\\clearpage\")\n",
+        "\n",
+        "    def generate_report(self):\n",
+        "        \"\"\"Generates the full LaTeX report by running all predefined queries.\"\"\"\n",
+        "        with log_step(f\"Generating LaTeX Analysis Report for {self.experiment_id}\"):\n",
+        "            self._generate_header()\n",
+        "\n",
+        "            # --- Incompleteness Section ---\n",
+        "            self._add_line(r\"\\\\section{Analysis of Incompleteness}\")\n",
+        "\n",
+        "            # Query 1: Unconnected Nodes\n",
+        "            self._run_and_format_query(\n",
+        "                title=\"Poorly Connected Instance Nodes\",\n",
+        "                description=\"This query finds instance nodes with one or zero semantic relationships (i.e., relationships other than IS_A or FROM), which may indicate concepts that are mentioned but not well-integrated.\",\n",
+        "                query=f\"\"\"\n",
+        "                    MATCH (n:Instance{self.scoped_label})\n",
+        "                    OPTIONAL MATCH (n)-[r]-(m) WHERE NOT type(r) IN ['IS_A', 'FROM']\n",
+        "                    WITH n, count(r) AS semanticDegree\n",
+        "                    WHERE semanticDegree <= 1\n",
+        "                    WITH n.displayName AS Entity, count(n) AS NumberOfDanglingNodes\n",
+        "                    RETURN Entity, NumberOfDanglingNodes\n",
+        "                    ORDER BY NumberOfDanglingNodes DESC, Entity ASC\n",
+        "                \"\"\",\n",
+        "                columns=[\"Entity\", \"NumberOfDanglingNodes\"],\n",
+        "                interpretation=\"A value of 1 means there is a single, unique entity with this name that is poorly connected. A value greater than 1 indicates multiple, unmerged instances of the same conceptual entity, all of which are poorly connected, highlighting both incompleteness and potential inconsistency.\"\n",
+        "            )\n",
+        "\n",
+        "            # Query 2: Missing Relationships\n",
+        "            self._run_and_format_query(\n",
+        "                title=\"Regulations Missing 'APPLIES_TO' Relationship\",\n",
+        "                description=\"This query identifies 'Regulation' instances that are not linked to anything via an 'APPLIES_TO' relationship, suggesting an incomplete definition.\",\n",
+        "                query=f\"\"\"\n",
+        "                    MATCH (typeNode:Type {{name: 'regulation'}})\n",
+        "                    MATCH (instanceNode:Instance{self.scoped_label})-[:IS_A]->(typeNode)\n",
+        "                    WHERE NOT (instanceNode)-[:APPLIES_TO]->()\n",
+        "                    WITH instanceNode.displayName AS Concept, count(instanceNode) AS Occurrences\n",
+        "                    RETURN Concept, Occurrences\n",
+        "                    ORDER BY Occurrences DESC, Concept ASC\n",
+        "                \"\"\",\n",
+        "                columns=[\"Concept\", \"Occurrences\"],\n",
+        "                interpretation=\"The 'Occurrences' column shows how many times a specific, incompletely defined concept appears. A high number for a particular concept signals a recurring issue of ambiguity or incompleteness in the source document.\"\n",
+        "            )\n",
+        "\n",
+        "            # --- Inconsistency Section ---\n",
+        "            self._add_line(r\"\\\\section{Analysis of Inconsistency}\")\n",
+        "\n",
+        "            # Query 3: Ambiguous Terms\n",
+        "            self._run_and_format_query(\n",
+        "                title=\"Ambiguous Terms (Inconsistent Types)\",\n",
+        "                description=\"This query finds terms that have been assigned multiple different types, indicating ambiguity in the source text or extraction errors.\",\n",
+        "                query=f\"\"\"\n",
+        "                    MATCH (i:Instance{self.scoped_label})-[:IS_A]->(t:Type)\n",
+        "                    WITH i.displayName AS AmbiguousEntity, count(i) AS Occurrences, collect(DISTINCT t.displayName) AS Types\n",
+        "                    WHERE size(Types) > 1\n",
+        "                    RETURN AmbiguousEntity, Occurrences, Types\n",
+        "                    ORDER BY Occurrences DESC, AmbiguousEntity ASC\n",
+        "                \"\"\",\n",
+        "                columns=[\"AmbiguousEntity\", \"Occurrences\", \"Types\"],\n",
+        "                interpretation=\"The results show terms creating ambiguity. 'Occurrences' is the number of separate nodes sharing this name with different types. 'Types' lists the different classifications assigned.\"\n",
+        "            )\n",
+        "\n",
+        "            # Query 4: Circular Dependencies\n",
+        "            self._run_and_format_query(\n",
+        "                title=\"Circular Type Dependencies\",\n",
+        "                description=\"This query identifies logical loops in the type hierarchy (e.g., A IS_A B, B IS_A A), which represent a structural inconsistency in the ontology.\",\n",
+        "                query=f\"\"\"\n",
+        "                    MATCH path = (t1:Type{self.scoped_label})-[:IS_A*]->(t2:Type)-[:IS_A]->(t1)\n",
+        "                    WITH [node IN nodes(path) | node.displayName] AS CircularPath\n",
+        "                    RETURN CircularPath, count(*) AS Occurrences\n",
+        "                    ORDER BY Occurrences DESC\n",
+        "                \"\"\",\n",
+        "                columns=[\"CircularPath\", \"Occurrences\"],\n",
+        "                interpretation=\"Any result from this query represents a significant logical inconsistency in the inferred ontology. 'CircularPath' shows the nodes forming the definitional loop.\"\n",
+        "            )\n",
+        "\n",
+        "            # Query 5: Unstable Concepts\n",
+        "            self._run_and_format_query(\n",
+        "                title=\"Most Unstable Concepts (High Refinement)\",\n",
+        "                description=\"This query identifies concepts that required the most refinement cycles (merging, re-typing), indicating they were the most ambiguous or inconsistently represented in the source text.\",\n",
+        "                query=f\"\"\"\n",
+        "                    MATCH (n:Instance{self.scoped_label})\n",
+        "                    WHERE n.refinementCount > 0\n",
+        "                    WITH n.displayName AS Entity, count(n) AS Occurrences, max(n.refinementCount) AS MaxModifications\n",
+        "                    RETURN Entity, Occurrences, MaxModifications\n",
+        "                    ORDER BY MaxModifications DESC, Occurrences DESC\n",
+        "                    LIMIT 25\n",
+        "                \"\"\",\n",
+        "                columns=[\"Entity\", \"Occurrences\", \"MaxModifications\"],\n",
+        "                interpretation=\"'Occurrences' is the number of nodes with this name that needed modification. 'MaxModifications' is the highest refinement count for any single node of that name, a direct measure of instability.\"\n",
+        "            )\n",
+        "\n",
+        "            self._generate_footer()\n",
+        "\n",
+        "            # Save the file\n",
+        "            latex_str = \"\\\\n\".join(self.latex_content)\n",
+        "            file_path = self.output_path / f\"{self.experiment_id}_analysis_report.tex\"\n",
+        "            with open(file_path, 'w', encoding='utf-8') as f:\n",
+        "                f.write(latex_str)\n",
+        "            logging.info(f\"Successfully saved LaTeX analysis report to: {file_path}\")"
+      ],
+      "metadata": {
+        "id": "4EM2FmKL51bh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "r4b07MWJ3v69"
       },
@@ -5530,8 +5739,17 @@
         "\n",
         "            # --- Reporting and Data Collection ---\n",
         "            if \"RPT\" in self.config.PROCESSING_STAGE:\n",
-        "                with log_step(\"Generating Report\"):\n",
-        "                    logging.info(\"Report generation step executed (placeholder).\")\n",
+        "                try:\n",
+        "                    # The group_output_path is the correct location for experiment-specific files\n",
+        "                    reporter = ReportGenerator(\n",
+        "                        graph_db_reader=graph_db.reader,\n",
+        "                        experiment_id=self.config.EXPERIMENT_ID,\n",
+        "                        run_timestamp=self.run_timestamp_str,\n",
+        "                        output_path=self.group_output_path\n",
+        "                    )\n",
+        "                    reporter.generate_report()\n",
+        "                except Exception as e:\n",
+        "                    logging.error(f\"Failed to generate analysis report: {e}\", exc_info=True)\n",
         "\n",
         "            if self.config.RUN_ER_TEST:\n",
         "                self._run_er_tests(graph_db, a_mind)\n",
